[package]
name = "s3_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "3.0", features = ["derive"] }
remotefs = "^0.2.0"
remotefs-aws-s3 = "^0.2.0"
regex = "1.5.4"
simple-logging = "2.0.2"
log = "0.4.14"
