[package]
name = "s3_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3.21"
clap = { version = "3.0", features = ["derive"] }
regex = "1.5.4"
simple-logging = "2.0.2"
log = "0.4.14"
tar = "0.4.38"
zip = "0.5.13"
aws-sdk-s3 = "0.8.0"
aws-config = "0.8.0"